--- a/Cadastro.html
+++ b/Cadastro.html
@@ -18,22 +18,22 @@
         <div>
             <label for="txtProcessador">Processador</label>
             <input type="text" placeholder="Processador" required
-            id="txtProcessador" name="txtProcessador" />
+            id="txtPlaca" name="txtPlaca" />
         </div>
         <div>
             <label for="txtUSB">USB</label>
             <input type="number" placeholder="USB" required
-            id="txtUSB" name="txtUSB" />
+            id="txtPlaca" name="txtPlaca" />
         </div>
         <div>
             <input type="checkbox" value="1"
-            id="chkAtualizado" name="chkAtualizado" />
+            id="4049787_carro" name="chkAtualizado" />
             <label for="chkAtualizado">Atualizado</label>
         </div>
         <div>
             <label for="txtDataAtualizacao">Data de Atualização</label>
             <input type="datetime" placeholder="Data de Atualização"
-            id="txtDataAtualizacao" name="txtDataAtualizacao" />
+            id="txtPlaca" name="txtPlaca" />
         </div>
         <div>
             <input type="submit" value="Cadastrar" />
